--- a/services/templates/authenticate/linkLostPassword.html.twig
+++ b/services/templates/authenticate/linkLostPassword.html.twig
@@ -43,7 +43,7 @@ function validateForm() {
 				<div class='dBlockNewLineS1'>Verificación: </div><div class='dBlockSize1'><input autocomplete='off' type="password" name='verification'></div>
 				<input type="hidden" name="to" value="{{ to }}" />
 				<div class='dLine'></div>
-				<div class='dBlockNewLineS3'><center><input type='submit' name='ok' value='Crear'></center></div>
+				<div class='dBlockNewLineS3'><center><input type='submit' name='ok' value='Continuar'></center></div>
 			</div>
 		</div>
 	</form>
