CABA pasa a 'distrito'. Fix en Route. Fix values en mapa.

--- a/services/templates/admin/caches.html.twig
+++ b/services/templates/admin/caches.html.twig
@@ -35,7 +35,16 @@
         <div class="dExplanation">Procesar cuando se agrega o actualiza una región de clipping.</div>
     </div>
 
+		
 
+	<div class="dSeparatorNewLine">
+		<div class='dText'>Cachés y temporales</div>
+	</div>
+	<div class='dBlockNewLineS2  dNoPaddingTop'>Tablas tmp_work_dataset_*:</div>
+	<div class='dBlockSize3'>
+        <input class='dSmallerButton' name="clearTempTables" type="submit" value="Liberar" id='clearTempTables' onclick="disableButton('clearTempTables');">
+        <div class="dExplanation">Liberar tablas de trabajo de más de 1 semana.</div>
+    </div>
 
 	<div class="dSeparatorNewLine">
 		<div class='dText'>Espacio utilizado</div>
