--- a/services/templates/admin/caches.html.twig
+++ b/services/templates/admin/caches.html.twig
@@ -40,6 +40,13 @@
 	<div class="dSeparatorNewLine">
 		<div class='dText'>Cachés y temporales</div>
 	</div>
+
+	<div class='dBlockNewLineS2  dNoPaddingTop'>Cachés de indicadores</div>
+	<div class='dBlockSize3'>
+        <input class='dSmallerButton' name="regenMetricRevisions" type="submit" value="Liberar" id='regenMetricRevisions' onclick="disableButton('regenMetricRevisions');">
+        <div class="dExplanation">Datos de tiledata, summary, selectedmetric, y números de revisión.</div>
+    </div>
+
 	<div class='dBlockNewLineS2  dNoPaddingTop'>Tablas tmp_work_dataset_*:</div>
 	<div class='dBlockSize3'>
         <input class='dSmallerButton' name="clearTempTables" type="submit" value="Liberar" id='clearTempTables' onclick="disableButton('clearTempTables');">
