--- a/services/templates/frontend/handle.html.twig
+++ b/services/templates/frontend/handle.html.twig
@@ -1,11 +1,11 @@
-{% import "macros.html.twig" as macros %}
-{% if not html_title is defined %}
-{% set html_title = 'Poblaciones' %}
+﻿{% import "macros.html.twig" as macros %}
+{% if not htmltitle is defined %}
+{% set htmltitle = 'Poblaciones' %}
 {% endif %}
 <html lang="es">
 	<head>
 	<meta charset="utf-8">
-	<title>{{ html_title }}</title>
+	<title>{{ htmltitle }}</title>
 	<meta name='keywords' content='mapas, georreferenciación, datos espaciales, cartografías'>
 	{% for meta in metadata %}{{ 
 		macros.metaInfo(meta.name, meta.value) }}
@@ -15,18 +15,30 @@
 	<link rel="shortcut icon" href="/favicon.ico">
 	</head>
 	<body>
-		{{ content | raw }}
+	{% for item in items %} 
+		{% if item.Name %}
+			<h4>{{ item.Name }}</h4>
+		{% endif %}
+		<p>{{ item.Value }}</p>
+	{% endfor %}
+
 
 	{% if links is defined %}
     <h4>Indicadores</h4>
 		{% for link in links %} 		
-			<div class='indentedText'><a href='{{ canonical }}/{{ link.Id }}{{ (debugParam == 1 ? '?debug=1' : '') }}#{{ link.UrlName }}'> {{ link.Name }}</a></div>
+			<p><a href='{{ canonical }}/{{ link.Id }}_{{ link.UrlName }}{{ (debugParam == 1 ? '?debug=1' : '') }}'> {{ link.Name }}</a></div>
+	{% endfor %}
+	{% endif %}
+	{% if variables is defined %}
+    <h4>Variables</h4>
+		{% for variable in variables %} 		
+			<p>{{ variable }}</p>
 	{% endfor %}
 	{% endif %}
 
 	{% if metadata_pdf is defined %}
     <h4>Metadatos</h4>
-		<div class='indentedText'><a href='{{ metadata_pdf }}'>{{ metadata_pdf }}</a></div>
+		<p><a href='{{ metadata_pdf }}'>{{ metadata_pdf }}</a></p>
 	{% endif %}
 
 	</body>
