--- a/services/templates/frontend/sitemap.html.twig
+++ b/services/templates/frontend/sitemap.html.twig
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
 	{% for link in links %}<url>
-		<loc>{{ baseurl }}/{{ link.url }}</loc>
+		<loc>{{ baseurl }}/{{ link.url }}_{{ link.title }}</loc>
 		<lastmod>{{ link.lastmod }}</lastmod>
 	</url>
 	{% endfor %}	
