--- a/services/templates/common/layout.html.twig
+++ b/services/templates/common/layout.html.twig
@@ -1,4 +1,4 @@
-﻿<html lang="es">
+<html lang="es">
 	<head>
 		<meta charset="utf-8">
 		<title>{{ application_name }}{% if html_title %} - {{ html_title }}{% endif %}</title>
