la grilla de datos permite editar. mejoras en título para los handles para crawler.

--- a/services/templates/frontend/handle.html.twig
+++ b/services/templates/frontend/handle.html.twig
@@ -5,7 +5,13 @@
 <html lang="es">
 	<head>
 	<meta charset="utf-8">
-	<title>{{ htmltitle }}</title>
+	<title>{% if clippingRegion is defined %}
+		{{ clippingRegionItem }}{% if parentCaption is
+		defined %}, {{ parentCaption }} - {%
+	else %}{%
+	endif %}{%
+	endif %}{{ handleTitle }}
+	</title>
 	<meta name='keywords' content='mapas, georreferenciación, datos espaciales, cartografías'>
 	{% for meta in metadata %}{{
 		macros.metaInfo(meta.name, meta.value) }}
@@ -22,7 +28,7 @@
 		defined %}, {{ parentCaption }}{%
 	endif %}{% if grandParentCaption is
 		defined %}, {{ grandParentCaption }}
-	{% endif %}
+	{% endif %} (mapa)
 	{% if selfNavigateLink is defined %}
 		-&gt; <a target="_blank" href='{{ selfNavigateLink }}'>link</a>
 	{% endif %}
