--- a/services/templates/common/macros/messages.html.twig
+++ b/services/templates/common/macros/messages.html.twig
@@ -15,9 +15,9 @@
 {% endmacro %}
 
 {% macro mainTitle() %}
-	style = "color: #FE6D4C;
-			text-align: left;
-			font-size: 21px;
+	style = "color: #000000;
+			text-align: center;
+			font-size: 25px;
 			font-family: proxima_nova,'Open Sans','lucida grande','Segoe UI',arial,verdana,'lucida sans unicode',tahoma,sans-serif;
 			padding: 12px 3px 0px 7px;"
 {% endmacro %}
@@ -35,8 +35,8 @@
 	style = "text-align: left;
 			font-size: 16px;
 			font-weight: bold;
-			padding: 22px 0px 3px 20px;
-			 color: #333333;
+			padding: 22px 20px 3px 20px;
+			color: #333333;
 			font-family: Arial,Helvetica,sans-serif;"
 {% endmacro %}
 
@@ -78,7 +78,8 @@
 
 {% macro sectionFooter() %}
 	style = "font-size: 11px;
-			text-align: justify;
+			text-align: center;
+			color: #333333;
 			margin-top: 3px;"
 {% endmacro %}
 
