--- a/services/templates/frontend/handle.html.twig
+++ b/services/templates/frontend/handle.html.twig
@@ -14,8 +14,9 @@
 	<meta name="generator" content="poblaciones.org">
 	<link rel="canonical" href="{{ canonical }}">
 	<link rel="shortcut icon" href="/favicon.ico">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
-	<body>
+	<body style="font-size: 20px;">
 	<h2>{{ handleTitle }} (mapa)
 	{% if selfNavigateLink is defined %}
 		-&gt; <a target="_blank" href='{{ selfNavigateLink }}'>link</a>
