--- a/frontend/src/common/styles/popovers.css
+++ b/frontend/src/common/styles/popovers.css
@@ -13,7 +13,20 @@
 .tooltip[x-placement^="bottom"] {
 	margin-top: 5px;
 }
+.md-snackbar.md-position-left {
+	bottom: 22px !important;
+	left: 16px !important;
+}
 
+.md-snackbar {
+	z-index: 1010 !important;
+	background-color: #ffffff !important;
+	color: black !important;
+	font-weight: bold !important;
+	padding: 4px 15px 0px 15px !important;
+	border: 1px solid #e2e2e2 !important;
+	box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2) !important;
+}
 	.tooltip[x-placement^="bottom"] .tooltip-arrow {
 		border-width: 0 5px 5px 5px;
 		border-left-color: transparent !important;
