ventanas móviles; onboarding; fullscreen; nuevo login

--- a/services/templates/authenticate/messages/lostPassword.html.twig
+++ b/services/templates/authenticate/messages/lostPassword.html.twig
@@ -1,27 +1,20 @@
 {% import "messages.html.twig" as styles %}
 {{ include('header.html.twig') }}
-	<div {{ styles.sectionTitle }}>
-		Instrucciones
-	</div>
-	<div {{ styles.sectionContent }}>
+<div {{ styles.sectionTitle }}>
+	Instrucciones
+</div>
+<div {{ styles.sectionContent }}>
 	<p {{ stylesP | raw }}>
-		Para volver a acceder a su cuenta en Poblaciones
-		deberá generar una nueva contraseña.
+	Para volver a acceder a su cuenta en Poblaciones deberá elegir una nueva contraseña.
 	</p>
-	</div><div {{ styles.sectionContent }}>
+</div><div {{ styles.sectionContent }}>
+
 	<p {{ stylesP | raw }}>
-		Para hacerlo,
-		haga click o copie en su navegador
-		el siguiente enlace:
-	</p>
-	</div><div {{ styles.sectionContent }}>
-	<p {{ stylesPLeft | raw }}>
-		Link: <a href='{{ url }}'>{{ url }}</a>.
-	</p>
-	</div>
-	<div {{ styles.sectionContent }}>
-	<p {{ stylesP | raw }}>
-		¡Gracias por utilizar Poblaciones!
-	</p>
-	</div>
+	Para hacerlo puede hacer click en Continuar o utilizar el código indicado a continuación:</p>
+</div>
+<div {{ styles.sectionToken }}>
+	Código: <b>{{ token }}</b>
+</div>
+{{ styles.addButton(viewAction) }}
+
 {{ include('footer.html.twig') }}
