--- a/frontend/src/credentials/styles/app.css
+++ b/frontend/src/credentials/styles/app.css
@@ -128,6 +128,12 @@ html, body {
 .floatRight {
 	float: right;
 }
+
+.app-singlepage {
+	overflow-y: auto;
+	height: 100%;
+}
+
 h3 {
 	color: #000;
 	line-height: 1.5em;
