--- a/frontend/src/admins/styles/index.scss
+++ b/frontend/src/admins/styles/index.scss
@@ -1,6 +1,6 @@
 //@import './variables.scss';
 //@import './mixin.scss';
-@import './transition.scss';
+//@import './transition.scss';
 
 body {
 	min-height: unset !important;
